--- a/index.html
+++ b/index.html
@@ -17,12 +17,11 @@
         <button id="submitGuess">Submit Guess</button>
         <div id="response"></div>
     </div>
-    <div id="scoreSliderContainer" style="display: none;">
-        <input type="range" id="scoreSlider" min="0" max="10" step="1" value="0" disabled>
+    <div id="scoreSliderContainer">
+        <input type="range" id="scoreSlider" min="0" max="5" step="1" value="5" disabled>
         <p id="sliderLabel">Correct answers: <span id="correctCount">0</span></p>
     </div>
     <script src="app.js"></script>
     <script src="movies.js"></script>
-    <script src="slider.js"></script>
 </body>
 </html>
